# igor-rtech

./: .gitmodules  params.yaml
src/: mymap.pgm
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/dual_manipulator_moveit_config/: .setup_assistant  package.xml
src/dual_manipulator_support/: package.xml
src/dual_sia5_moveit_config/: .setup_assistant  package.xml
src/imu/: CMakeLists.txt
src/motoman_sia5d_interface_demo/: CMakeLists.txt  package.xml
src/motoman_sia5d_interface_demo/src/: interface_demo.cpp
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/motoman_sia5d_moveit_config/config/: motoman_sia5d.srdf
src/my_r2d2/config/: r2d2.rviz
src/my_r2d2/launch/: ar_tracker.launch  r2d2.launch  teleop.launch
src/my_r2d2/urdf/: r2d2.urdf  r2d2.urdf.xacro
