<?xml version="1.0"?>
<package format="2">
  <name>motoman_sia5d_interface_demo</name>
  <version>0.1.0</version>
  <description>The motoman_sia5d_interface_demo package</description>

  <maintainer email="igpodg@ttu.ee">Igor Podgainõi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
